# diploma_work

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
pricingapp/: apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
pricingapp/migrations/: 0001_initial.py
usersapp/: models.py  serializers.py  urls.py  views.py
usersapp/management/commands/: ccsu.py
usersapp/migrations/: 0001_initial.py
